[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/jam_game_art.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/MovingPlatform.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 72, 24 )

[node name="MovingPlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="platform" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 7
motion/sync_to_physics = true

[node name="texture" type="Node2D" parent="platform"]
scale = Vector2( 3, 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="platform/texture"]
position = Vector2( -16, 0 )
frames = SubResource( 2 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="platform/texture"]
frames = SubResource( 4 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="platform/texture"]
position = Vector2( 16, 0 )
frames = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform"]
shape = SubResource( 7 )

[node name="Button" type="Button" parent="platform"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -88.0
margin_top = -27.0
margin_right = 88.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveTween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="button_up" from="platform/Button" to="." method="_on_Button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
